--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -114,7 +114,7 @@ body {
     top: 100%;
     right: 0;
     width: 260px;
-    background-color: #a3e635;
+    background-color: #a8d5ba;
     flex-direction: column;
     align-items: flex-start;
     display: none;
