--- a/src/components/pagewrappereco/PageWrapperEco.css
+++ b/src/components/pagewrappereco/PageWrapperEco.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../../assets/FondApropos.png");
+  background-image: url("../../assets/FondApropos.webp");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
