--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -32,25 +32,25 @@
 .footer-col .icon {
   font-size: 24px;
   margin-bottom: 15px;
-  color: #ffffaf;
+  color: #fdfdf9;
 }
 
 .footer-col h3 {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 15px;
-  color: #ffffaf;
+  color: #fdfdf9;
 }
 
 .footer-col p {
   font-size: 14px;
   line-height: 1.4;
   margin-bottom: 10px;
-  color: #ffffaf;
+  color: #fdfdf9;
 }
 
 .footer-col a {
-  color: #ffffaf;
+  color: #fdfdf9;
   text-decoration: underline;
   font-size: 14px;
   font-weight: bold;
@@ -79,7 +79,7 @@
 }
 
 .footer-nav a {
-  color: #ffffaf;
+  color: #fdfdf9;
   text-decoration: none;
   font-size: 16px;
   font-weight: normal;
