--- a/src/components/service/Service.css
+++ b/src/components/service/Service.css
@@ -1,5 +1,5 @@
 .services--section {
-  background-color: #ffffaf;
+  background-color: #fdfdf9;
   color: #333;
   padding: 4rem 2rem;
   text-align: center;
@@ -54,7 +54,7 @@
 .service-icon {
   font-size: 3.5rem;
   margin-bottom: 1rem;
-  color: #fdfdc9;
+  color: #fdfdf9;
   background-color: rgba(255, 255, 255, 0.1);
   padding: 0.7rem;
   border-radius: 50%;
@@ -69,7 +69,7 @@
 .service-card p {
   font-size: 1rem;
   line-height: 1.6;
-  color: #f0f0f0;
+  color: #fff;
 }
 
 @media (max-width: 700px) {
